--- a/AngularDotNetCoreNagios/ClientApp/src/app/shared/layout/header/header.component.html
+++ b/AngularDotNetCoreNagios/ClientApp/src/app/shared/layout/header/header.component.html
@@ -12,10 +12,10 @@
           <a class="nav-link text-truncate" [routerLink]="['/hosts']"><i class="fa fa-server fa-fw"></i> <span class="d-none d-sm-inline">Hosts</span></a>
         </li>
         <li class="nav-item w-100">
-          <a class="nav-link text-truncate" href="#spy1"><i class="fa fa-cogs fa-fw"></i> <span class="d-none d-sm-inline">Services</span></a>
+          <a class="nav-link text-truncate"  [routerLink]="['/contacts']"><i class="fa fa-cogs fa-fw"></i> <span class="d-none d-sm-inline">Contacts</span></a>
         </li>
         <li class="nav-item w-100">
-          <a class="nav-link text-truncate" href="#spy2"><i class="fa fa-heart fa-fw"></i> <span class="d-none d-sm-inline">Link 2</span></a>
+          <a class="nav-link text-truncate"[routerLink]="['/config']"><i class="fa fa-heart fa-fw"></i> <span class="d-none d-sm-inline">Configuration</span></a>
         </li>
         <li class="nav-item w-100">
           <a class="nav-link text-truncate" href="#spy3"><i class="fa fa-star fa-fw"></i> <span class="d-none d-sm-inline">Link</span></a>
