--- a/AngularDotNetCoreNagios/ClientApp/src/styles.scss
+++ b/AngularDotNetCoreNagios/ClientApp/src/styles.scss
@@ -67,3 +67,17 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 main{
   margin-top: 50px;
 }
+
+.tblHeader{
+
+}
+
+.even {
+  background-color: #f36d33;
+  color: white;
+}
+
+.odd{
+  background-color: #3d3c3c;
+  color: white;
+}
